feat: create sort option logic

--- a/src/i18next/locales/en/en_translation.json
+++ b/src/i18next/locales/en/en_translation.json
@@ -5,7 +5,8 @@
   },
   "toolBar": {
     "sort_by": "Sort By",
-    "date": "Date",
+    "asc_date": "Ascendant Date",
+    "desc_date": "Descendant Date",
     "title": "Title",
     "search_note": "Search Note",
     "search": "Search"
