feat: create filter by tag

--- a/src/i18next/locales/en/en_translation.json
+++ b/src/i18next/locales/en/en_translation.json
@@ -8,6 +8,8 @@
     "asc_date": "Ascendant Date",
     "desc_date": "Descendant Date",
     "title": "Title",
+    "filter_heading": "Filter By Tag",
+    "reset_filter": "Clear Filter Result",
     "search_note": "Search Note",
     "search": "Search"
   },
